  Under particular circumstances, Supvisors could have multiple master nodes

* Fixed https://github.com/julien6387/supvisors/issues/85
  When using '#' in the Supvisors rules file, a subset of nodes can optionally be defined

* Fixed https://github.com/julien6387/supvisors/issues/84
  In the Supvisors rules file, program rules can be defined using both model reference and attributes

* The layout of Web UI statistics sections has been rearranged

* Fixed CSS style missing for CHECKING node state in tables

* Type annotations are added progressively in source code

* Start switching from unittest to pytest

* Logs (especially Debug and Trace) updated to avoid objects to be printed, which is quite unreadable

* Documentation updated


0.4 (2021-02-14)
----------------

* Auto-refresh button added to all pages

* Web UI Main page reworked by adding a subdivision of application in node boxes

* Fixed exception when exiting using Ctrl+c from shell

* Fixed exception when rules files is not provided

* Documentation updated


0.3 (2020-12-29)
----------------

* Fixed https://github.com/julien6387/supvisors/issues/81
  When Supvisors logfile is set to AUTO, Supvisors uses the same logger as Supervisor

* Fixed https://github.com/julien6387/supvisors/issues/79
  When FATAL or UNKNOWN Process state is forced by Supvisors, spawnerr was missing in the listener payload

* Documentation updated

* Useless folder rsc_ref deleted

* 'design' folder moved to a dedicated GitHub repository

* 100% coverage reached in unit tests.


0.2 (2020-12-14)
----------------

* Migration to Python 3.6
  Versions of dependencies are refreshed, more particularly supervisor 4.2.1

* CSS of Web UI updated / simplified

* New action added to Host Process page of WebUI
  'tail -f stderr' button

* New information actions added to Application page of WebUI
  'description' field
  'clear logs', 'tail -f stdout', 'tail -f stderr' buttons

* Fixed https://github.com/julien6387/supvisors/issues/75